[package]
name = "mc_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
flate2 = "1.0.22"
fastnbt = "1.3.0"
num-traits = "0.2.17"
java-rand = "0.2.0"
once_cell = "1.19.0"
ndarray = "0.15.6"
md5 = "0.7.0"
