[package]
name = "mc_utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
num-traits = "0.2.17"
java-rand = "0.2.0"
once_cell = "1.19.0"
ndarray = "0.15.6"
crossterm = "0.27.0"
num-format = "0.4.4"

[examples]
slime = "examples/slime.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "slime"
harness = false
